ecsdb_cli/src/snapshots/ecsdb_cli__pipeline__test__query_filters@all|filter(data.array[3] == 42).snap
---
source: ecsdb_cli/src/pipeline.rs
description: "Pipeline::parse(\"all|filter(data.array[3] == 42)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data(
                        [
                            Field(
                                "array",
                            ),
                            Index(
                                3,
                            ),
                        ],
                    ),
                    op: Eq,
                    value: FilterValue(
                        Number(42),
                    ),
                },
            ),
        ],
    },
)
