ecsdb_cli/src/snapshots/ecsdb_cli__pipeline__test__query_filters@all|filter(data.items[0].id == "x").snap
---
source: ecsdb_cli/src/pipeline.rs
description: "Pipeline::parse(\"all|filter(data.items[0].id == \"x\")\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data(
                        [
                            Field(
                                "items",
                            ),
                            Index(
                                0,
                            ),
                            Field(
                                "id",
                            ),
                        ],
                    ),
                    op: Eq,
                    value: FilterValue(
                        String("x"),
                    ),
                },
            ),
        ],
    },
)
