ecsdb_cli/src/snapshots/ecsdb_cli__pipeline__test__query_filters@all|filter(data[0] == 1).snap
---
source: ecsdb_cli/src/pipeline.rs
description: "Pipeline::parse(\"all|filter(data[0] == 1)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data(
                        [
                            Index(
                                0,
                            ),
                        ],
                    ),
                    op: Eq,
                    value: FilterValue(
                        Number(1),
                    ),
                },
            ),
        ],
    },
)
