ecsdb_cli/src/snapshots/ecsdb_cli__pipeline__test__query_filters@all|filter(entity == -1).snap
---
source: ecsdb_cli/src/pipeline.rs
description: "Pipeline::parse(\"all|filter(entity == -1)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Entity,
                    op: Eq,
                    value: FilterValue(
                        Number(-1),
                    ),
                },
            ),
        ],
    },
)
