ecsdb_cli/src/snapshots/ecsdb_cli__pipeline__test__query_filters@all|sortBy(data.priority).snap
---
source: ecsdb_cli/src/pipeline.rs
description: "Pipeline::parse(\"all|sortBy(data.priority)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            SortBy(
                Column(
                    Data(
                        [
                            Field(
                                "priority",
                            ),
                        ],
                    ),
                ),
                Asc,
            ),
        ],
    },
)
